--- a/mawulijo/layouts/partials/head.html
+++ b/mawulijo/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <title>
-	{{ .Title }} | Matt Finucane
+	{{ .Title }} | Joshua M. Agbeku
 </title>
 {{ if .Site.Params.no_index }}
 	<meta name="robots" content="noindex">
