--- a/mawulijo/layouts/shortcodes/social.html
+++ b/mawulijo/layouts/shortcodes/social.html
@@ -1,7 +1,7 @@
 <ul class="social-links">
 	
 	<li>
-		<a class="social-link" href="https://github.com/matfin">
+		<a class="social-link" href="https://github.com/mawulijo">
 			<svg width="40" height="40" role="img" data-svg="github">
 				<use xlink:href="/svg/sprite.svg#github">
 				</use>
@@ -10,7 +10,7 @@
 	</li>
 
 	<li>
-		<a class="social-link" href="https://twitter.com/matfinucane">
+		<a class="social-link" href="https://twitter.com/mawulijo">
 			<svg width="40" height="40" role="img" data-svg="twitter">
 				<use xlink:href="/svg/sprite.svg#twitter">
 				</use>
@@ -19,7 +19,7 @@
 	</li>
 
 	<li>
-		<a class="social-link" href="https://www.linkedin.com/in/mattfinucane/">
+		<a class="social-link" href="https://www.linkedin.com/in/agbekujoshua/">
 			<svg width="40" height="40" role="img" data-svg="linkedin">
 				<use xlink:href="/svg/sprite.svg#linkedin">
 				</use>
@@ -27,13 +27,5 @@
 		</a>
 	</li>
 
-	<li>
-		<a class="social-link" href="https://stackoverflow.com/users/1515180/matfin">
-			<svg width="40" height="40" role="img" data-svg="stackoverflow">
-				<use xlink:href="/svg/sprite.svg#stackoverflow">
-				</use>
-			</svg>
-		</a>
-	</li>
 
 </ul>
