--- a/mawulijo/layouts/partials/header.html
+++ b/mawulijo/layouts/partials/header.html
@@ -2,6 +2,7 @@
 	<a class="title" href="{{ .Site.BaseURL }}">
 		<h1 class="animate-in">
 			{{ .Site.Params.title_first }}
+			<!--{{ .Site.Params.title_other_names }}-->
 			<strong>{{ .Site.Params.title_last }}</strong>
 		</h1>
 	</a>
