--- a/mawulijo/layouts/partials/twitter_card.html
+++ b/mawulijo/layouts/partials/twitter_card.html
@@ -1,5 +1,5 @@
-<meta name="twitter:site" content="@matfinucane">
-<meta name="twitter:creator" content="@matfinucane">
+<meta name="twitter:site" content="@mawulijo">
+<meta name="twitter:creator" content="@mawulijo">
 <meta name="twitter:title" content="{{ .Title }}">
 <meta name="twitter:url" content="{{ .Permalink }}">
 <meta name="twitter:description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
